# FastAgent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: basic_agent.py
src/fastagent/: __init__.py  _context.py  _graph.py  _timeout.py  exceptions.py  node.py
tests/: conftest.py  test_fallback.py  test_graph.py  test_loop_protection.py  test_node.py  test_retry.py  test_timeout.py
