[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastagent"
dynamic = ["version"]
description = "Production-ready reliability layer for LangGraph agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Aditya Dawadikar", email = "mail.aditya.dawadikar@gmail.com" },
]
keywords = [
    "langgraph",
    "langchain",
    "agents",
    "llm",
    "reliability",
    "retry",
    "timeout",
    "fallback",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.1.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/aditya-dawadikar/FastAgent"
Repository = "https://github.com/aditya-dawadikar/FastAgent"
"Bug Tracker" = "https://github.com/aditya-dawadikar/FastAgent/issues"
Changelog = "https://github.com/aditya-dawadikar/FastAgent/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/fastagent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fastagent"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fastagent --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/fastagent"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "ANN"]
# ANN401: Any is justified in wrapper/adapter code that must accept arbitrary graph objects.
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/fastagent"]
